--- a/index.html
+++ b/index.html
@@ -10,4 +10,6 @@
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6594004239342534"
+     crossorigin="anonymous"></script>
 </html>
